<resources>
    <string name="app_name">Ryuunta ESP</string>
    <string name="custom_text_current_ssid">Enter password for ssid: %s</string>
    <string name="title_bottom_nav_home">Home</string>
    <string name="title_bottom_nav_add_device">Thêm thiết bị</string>
    <string name="title_bottom_nav_scenarios">Kịch bản</string>
    <string name="title_bottom_nav_shopping">Mua sắm</string>
    <string name="title_bottom_nav_user">Hồ sơ</string>
    <string name="title_bottom_nav_add_dev">Thêm t.bị</string>
    <string name="title_bottom_nav_noti">Thông báo</string>
    <string name="loading">Đang tải</string>
    <string name="wait_a_few">Chờ tí…</string>
    <string name="content_desc_add">ADD</string>
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="add_more_home">Thêm nhà</string>
    <string name="txxt_add_more">Thêm</string>
    <string name="txt_bedroom">Phòng ngủ</string>
    <string name="txt_living_room">Phòng khách</string>
    <string name="txt_add_new_home">Thêm nhà mới</string>
    <string name="txt_input">Nhập</string>
    <string name="txt_input_name_home">Nhập tên nhà</string>
    <string name="txt_select_avatar">Chọn ảnh đại diện</string>
    <string name="txt_manage">Quản lý phòng</string>
    <string name="cancel">Huỷ</string>
    <string name="ok">OK</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_login_success">Đăng nhập xong rồi!</string>
    <string name="txt_start_using_app">Bắt đầu sử dụng ứng dụng</string>
    <string name="txt_failure">Tạch rate</string>
    <string name="txt_failure_message">Chúc mừng bạn đã thất bại, thử lại nhé 😉</string>
    <string name="txt_email">Email</string>
    <string name="hint_password">••••••••</string>

    <string name="default_web_client_id">724916075490-35mea4n7ol5r4iavj13t82co2e6mj1sv.apps.googleusercontent.com</string>
    <string name="open_weather_map_api_key">4ac635f38bc87f9750bcaa2ba6b222ad</string>

    <string name="password_must_be_at_least_6_characters">Mật khẩu gì ngắn thế?? Phải 6 kí tự trở lên.</string>
    <string name="password_is_empty">Chưa nhập pass kìa!!</string>
    <string name="mail_is_empty">Chưa nhập mail kìa!!</string>
    <string name="mail_form_not_corrected">mail chưa đúng kìa!!</string>
    <string name="txt_log_in">Đăng nhập</string>
    <string name="txt_create_account">Tạo tài khoản</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="swipe_to_sign_in">Swipe to sign in</string>
    <string name="txt_sign_in_with">Sign In with</string>
    <string name="txt_done">Xong rồi</string>
    <string name="txt_create_account_success">Tạo tài khoản thành công. Có muốn đăng nhập luôn không?</string>
    <string name="txt_ok_now">Luôn</string>
    <string name="txt_no">Không</string>
    <string name="txt_nothing_here_for_now">Tạm thời chưa có gì ở đây</string>
    <string name="label_humidity_outside">Độ ẩm ngoài trời</string>
    <string name="label_fine_dust_outside">PM2.5 ngoài trời</string>
    <string name="error_load_background">Lỗi tải hình nền</string>
    <string name="txt_switch_button">Công tắc</string>
    <string name="txt_fan_remote">Điều khiển quạt</string>
    <string name="txt_btn_1">Nút 1</string>
    <string name="txt_good">Tốt</string>
    <string name="txt_fair">Khá</string>
    <string name="txt_moderate">Trung bình</string>
    <string name="txt_poor">Kém</string>
    <string name="txt_very_poor">Rất kém</string>
    <string name="error_element_not_found">Không tìm thấy nút này trên máy chủ. Không thể thao tác.</string>
    <string name="error_firebase_realtime_authentication_failure">Xác thực với firebase realtime thất bại. Không thể lấy dữ liệu thiết bị</string>
    <string name="txt_dark_mode">Chế độ nền tối</string>
    <string name="txt_home_manage">Quản lí nhà</string>
    <string name="txt_this_function_zz">Tính năng này..hmm..zz</string>
  <string name="txt_develop_in_progress">zzz..Vẫn chưa làm xong..zzz</string>
  <string name="oops">Oops!!</string>
    <string name="txt_cannot_get_data_user">Không thể lấy dữ liệu người dùng!!</string>
    <string name="txt_house_created">Nhà mới đã được tạo</string>
    <string name="txt_room_created">Phòng mới đã được tạo</string>
  <string name="txt_device_signed">Thiết bị đã được chuyển tới phòng mới</string>
    <string name="txt_house_not_found_cannot_get_room">Không tìm thấy Id nhà này, không thể lấy danh sách phòng.</string>
    <string name="all">Tất cả</string>
</resources>