<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/_space8dp"
            android:layout_marginBottom="@dimen/_space4dp"
            android:background="@drawable/bg_corner_20"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_space8dp"
            android:paddingVertical="@dimen/_space16dp">

            <TextView
                android:id="@+id/title_dialog_add_home"
                style="@style/theme_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_new_home"
                android:textSize="@dimen/text_size_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_space16dp"
                android:layout_marginTop="@dimen/_space24dp"
                android:background="@drawable/bg_item_no_ripple_12"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/_space8dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_circle_avatar"
                    android:layout_width="@dimen/_space36dp"
                    android:layout_height="@dimen/_space36dp"
                    android:layout_marginStart="@dimen/_space8dp"
                    app:shapeAppearanceOverlay="@style/circle_shape"
                    app:srcCompat="@drawable/klee" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_space8dp"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        style="@style/theme_input_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:hint="@string/txt_input_name_home"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/space_screen_super_small"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/theme_hint_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_space16dp"
                android:layout_marginTop="@dimen/_space16dp"
                android:text="@string/txt_select_avatar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_space12dp"
                android:layout_marginBottom="@dimen/_space24dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <TextView
                android:id="@+id/txt_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_space16dp"
                android:layout_marginHorizontal="@dimen/_space16dp"
                style="@style/theme_button_confirm"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</layout>