<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?backgroundColor"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_user_gradient"
                android:padding="@dimen/_space16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_user_avt"
                    android:layout_width="@dimen/_space72dp"
                    android:layout_height="@dimen/_space72dp"
                    android:layout_margin="@dimen/_space24dp"
                    app:shapeAppearanceOverlay="@style/circle_shape"
                    app:srcCompat="@drawable/klee" />

                <TextView
                    android:id="@+id/txt_username"
                    style="@style/theme_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_user_avt"
                    android:layout_marginTop="@dimen/_space4dp"
                    android:layout_toEndOf="@id/img_user_avt"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@+id/txt_email"
                    style="@style/theme_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_username"
                    android:layout_alignStart="@id/txt_username"
                    android:layout_alignEnd="@id/txt_username"
                    android:layout_marginTop="@dimen/_space4dp"
                    tools:text="email@gmail.com" />

                <LinearLayout
                    android:id="@+id/btn_manage_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_email"
                    android:layout_alignStart="@id/txt_username"
                    android:layout_marginTop="@dimen/_space12dp"
                    android:background="@drawable/bg_white_item_selector_corner_12"
                    android:elevation="@dimen/_space2dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_space4dp">

                    <TextView
                        style="@style/theme_hint_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_space8dp"
                        android:text="1 home"
                        android:textStyle="normal" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_space12dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/txt_number_of_device"
                        style="@style/theme_hint_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_space8dp"
                        android:text="2 devices"
                        android:textStyle="normal" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_space8dp"
                android:background="@drawable/bg_item_no_ripple_12"
                android:orientation="vertical"
                android:padding="@dimen/_space8dp">

                <ImageView
                    android:layout_width="@dimen/_space128dp"
                    android:layout_height="@dimen/_space128dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_space128dp"
                    android:alpha="0.3"
                    app:srcCompat="@drawable/paimon_sleep" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/theme_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_space24dp"
                    android:gravity="center"
                    android:text="@string/txt_nothing_here_for_now" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@drawable/seek_bar_fan_level"
                    android:max="2"/>

                <TextView
                    android:id="@+id/btn_switch_darkmode"
                    android:layout_marginTop="@dimen/_space24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="darkmode"
                    android:gravity="center"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_logout"
                    style="@style/theme_button_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_space16dp"
                    android:layout_marginVertical="@dimen/_space24dp"
                    android:paddingVertical="@dimen/_space12dp"
                    android:background="@drawable/bg_button_corner_gray_24"
                    android:gravity="center"
                    android:text="@string/txt_logout"
                    android:textColor="@color/red_error" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_space64dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>